# python-timeseries-exercise

./: .clocignore  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE.md  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  validate-manifests.sh  validate-yaml.sh
.devcontainer/: devcontainer.json
.devcontainers/: devcontainer.json
.github/: kube-linter.yaml
angular-dashboard/: .dockerignore  Dockerfile  nginx.conf
dashboard-angular/: .dockerignore
dashboard-nicegui/: Dockerfile  requirements-dev.txt  requirements.txt
dashboard-plotly/: README.md  pyproject.toml  requirements.txt
dashboard-streamlit/: Dockerfile  requirements.txt
data-api/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
data-api/api/: bootstrap.py  constants.py  filters.py  main.py  query.py
data-api/api/sensors/: models.py  routes.py  service.py
data-api/api/temperature/: filters.py  models.py  routes.py  service.py
data-api/tests/: test_bootstrap.py  test_filters.py  test_main.py  test_query.py  test_routes.py  test_sensors_routes.py  test_service.py  test_temperature_filters.py  test_temperature_routes.py
data-consumer/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
data-consumer/consumer/: bootstrap.py  constants.py  db.py  main.py  model.py  worker.py
data-consumer/tests/: test_bootstrap.py  test_db.py  test_main.py  test_worker.py
data-dashboard/: Dockerfile
data-generator/: Dockerfile  pyproject.toml  requirements.txt
data-sensor/: Dockerfile  pyproject.toml  (+2 more)
(+116 files in other folders)
